<resources>
    <string name="app_name">It That Calculates</string>
    <string name="greeting">Calculate somethin:</string>
    <string name="field_hint">0</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button_times">x</string>
    <string name="button_divide">÷</string>
    <string name="button_add">+</string>
    <string name="button_sub">-</string>
    <string name="button_pow">pow</string>
    <string name="button_sign">+-</string>
    <string name="button_eq">=</string>
    <string name="button_dec">.</string>
    <string name="button_clear">C</string>
    <string name="button_clear_view">CE</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
