<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.uwyo.toddt.itthatcalculates.CalcFragment"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="#000000">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/num_field"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:hint="@string/field_hint"
        android:background="@drawable/pika"
        android:textSize="20pt"
        android:textColor="#000000"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center_vertical|end"
        android:textAlignment="viewEnd"
        android:layout_weight="0.56"
        android:padding="22dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="2dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_weight="1"
            android:textSize="10pt"
            android:background="@drawable/pokeball"
            android:paddingBottom="12dp"
            android:layout_margin="2px"
            android:text="@string/button_clear"
            android:id="@+id/b_clearAll"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_weight="1"
            android:textSize="10pt"
            android:background="@drawable/pokeball"
            android:paddingBottom="12dp"
            android:layout_margin="2px"
            android:text="@string/button_clear_view"
            android:id="@+id/b_clear"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_weight="1"
            android:textSize="10pt"
            android:background="@drawable/pokeball"
            android:paddingBottom="12dp"
            android:layout_margin="2px"
            android:text="@string/button_pow"
            android:id="@+id/b_pow"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_weight="1"
            android:textSize="10pt"
            android:background="@drawable/pokeball"
            android:paddingBottom="12dp"
            android:layout_margin="2px"
            android:text="@string/button_sub"
            android:id="@+id/b_sub"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="2dp">
        
        <Button
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_weight="1"
            android:textSize="10pt"
            android:background="@drawable/pokeball"
            android:paddingBottom="12dp"
            android:layout_margin="2px"
            android:text="@string/button1"
            android:id="@+id/b_1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_weight="1"
            android:textSize="10pt"
            android:background="@drawable/pokeball"
            android:paddingBottom="12dp"
            android:layout_margin="2px"
            android:text="@string/button2"
            android:id="@+id/b_2"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_weight="1"
            android:textSize="10pt"
            android:background="@drawable/pokeball"
            android:paddingBottom="12dp"
            android:layout_margin="2px"
            android:text="@string/button3"
            android:id="@+id/b_3"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_weight="1"
            android:textSize="10pt"
            android:background="@drawable/pokeball"
            android:paddingBottom="12dp"
            android:layout_margin="2px"
            android:text="@string/button_add"
            android:id="@+id/b_add"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_weight="1"
            android:textSize="10pt"
            android:background="@drawable/pokeball"
            android:paddingBottom="12dp"
            android:layout_margin="2px"
            android:text="@string/button4"
            android:id="@+id/b_4"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_weight="1"
            android:textSize="10pt"
            android:background="@drawable/pokeball"
            android:paddingBottom="12dp"
            android:layout_margin="2px"
            android:text="@string/button5"
            android:id="@+id/b_5"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_weight="1"
            android:textSize="10pt"
            android:background="@drawable/pokeball"
            android:paddingBottom="12dp"
            android:layout_margin="2px"
            android:text="@string/button6"
            android:id="@+id/b_6"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_weight="1"
            android:textSize="10pt"
            android:background="@drawable/pokeball"
            android:paddingBottom="12dp"
            android:layout_margin="2px"
            android:text="@string/button_divide"
            android:id="@+id/b_divide"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_weight="1"
            android:textSize="10pt"
            android:background="@drawable/pokeball"
            android:paddingBottom="12dp"
            android:layout_margin="2px"
            android:text="@string/button7"
            android:id="@+id/b_7"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_weight="1"
            android:textSize="10pt"
            android:background="@drawable/pokeball"
            android:paddingBottom="12dp"
            android:layout_margin="2px"
            android:text="@string/button8"
            android:id="@+id/b_8"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_weight="1"
            android:textSize="10pt"
            android:background="@drawable/pokeball"
            android:paddingBottom="12dp"
            android:layout_margin="2px"
            android:text="@string/button9"
            android:id="@+id/b_9"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_weight="1"
            android:textSize="10pt"
            android:background="@drawable/pokeball"
            android:paddingBottom="12dp"
            android:layout_margin="2px"
            android:text="@string/button_times"
            android:id="@+id/b_times"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_weight="1"
            android:textSize="10pt"
            android:background="@drawable/pokeball"
            android:paddingBottom="12dp"
            android:layout_margin="2px"
            android:text="@string/button_sign"
            android:id="@+id/b_sign"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_weight="1"
            android:textSize="10pt"
            android:background="@drawable/pokeball"
            android:paddingBottom="12dp"
            android:layout_margin="2px"
            android:text="@string/button0"
            android:id="@+id/b_0"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_weight="1"
            android:textSize="10pt"
            android:background="@drawable/pokeball"
            android:paddingBottom="12dp"
            android:layout_margin="2px"
            android:text="@string/button_dec"
            android:id="@+id/b_dec"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_weight="1"
            android:textSize="10pt"
            android:background="@drawable/pokeball"
            android:paddingBottom="12dp"
            android:layout_margin="2px"
            android:text="@string/button_eq"
            android:id="@+id/b_eq"/>
    </LinearLayout>

</LinearLayout>
